--- a/Price.html
+++ b/Price.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 	    <header class="main-header">
-			<div class="up-container">  
+			<div class="container">  
 			    <div class="logo">
 	                <img src="http://placehold.it/150x50">
 			    </div>
@@ -25,7 +25,7 @@
 			</div>	    
 	    </header>
 	    <section class="header-page">
-		        <h1 class="header">Прайс-лист</h1>    
+		        <h1 class="page-title">Прайс-лист</h1>    
 		    <div class="breadcrumbs">    
 			    <ul>
 				    <li><a href="#">Главная</a></li>
@@ -39,7 +39,7 @@
 		<main class="main-price">
             <section class="section-price">
             	<div class="desc-price">
-            		<h2 class="header-two">Мы используем только лучшие средства:</h2>
+            		<h2 class="page-sub-title">Мы используем только лучшие средства:</h2>
             		<ul>
             			<li>Baxter of California</li>
             			<li>Mr Natty</li>
@@ -48,7 +48,7 @@
             		</ul>
             	</div>
             	<div class="price">
-            		<h2 class="header-two">Цены на услуги наших мастеров:</h2>
+            		<h2 class="page-sub-title">Цены на услуги наших мастеров:</h2>
             		<table class="table-price">
             			<tr>
             				<td>Стрижка</td>
@@ -67,7 +67,7 @@
             </section>
             <section class="text-price">
             	<div class="text-price-desc">
-            		<h2 class="header-two">Несколько слов о нас:</h2>
+            		<h2 class="page-sub-title">Несколько слов о нас:</h2>
             		<p>
             		    Наша парикмахерская занимается исключительно мужскими<br> 
             		    стрижками.Стрижка каждого клиента для нас-это уникальная<br> 
@@ -86,7 +86,7 @@
             </section>
 		</main>
 		<footer class="footer-main">
-			<div class="down-container">
+			<div class="container">
 			    <section class="footer-contacts">
 			    	Барбершоп «Бородинский»<br>
                     Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
