--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 	    <header class="main-header">
-			<div class="up-container">  
+			<div class="container">  
 			    <div class="logo">
 	                <img src="http://placehold.it/150x50">
 			    </div>
@@ -25,7 +25,7 @@
 			</div>	    
 	    </header>
 	    <section class="header-page">
-		    <h1 class="header">Набор для путешествий "Baxter of California"</h1>    
+		    <h1 class="page-title">Набор для путешествий "Baxter of California"</h1>    
 		    <div class="breadcrumbs">    
 			    <ul>
 				    <li><a href="#">Главная</a></li>
@@ -76,7 +76,7 @@
 			</div>
 		</main>
 		<footer class="footer-main">
-			<div class="down-container">
+			<div class="container">
 			    <section class="footer-contacts">
 			    	Барбершоп «Бородинский»<br>
                     Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
