--- a/Catalog.html
+++ b/Catalog.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 	    <header class="main-header">
-			<div class="up-container">  
+			<div class="container">  
 			    <div class="logo">
 	                <img src="http://placehold.it/150x50">
 			    </div>
@@ -25,7 +25,7 @@
 			</div>	    
 	    </header>
 	    <section class="header-page">
-	            <h1 class="header">Средства для ухода</h1>
+	            <h1 class="page-title">Средства для ухода</h1>
 		    <div class="breadcrumbs">    
 			    <ul>
 				    <li><a href="#">Главная</a></li>
@@ -55,7 +55,7 @@
 		    </form>
 		</aside>
 		<main class="gallery">
-			<article class="gallery-items">
+			<article class="gallery-item">
 				<img src="http://placehold.it/200x200"><br>
 			    <b>Набор для путешествий<br>
 				"Baxter of California"</b>
@@ -64,7 +64,7 @@
                 </div>  
 				<button class="bnt-buy" type="submit">Купить</button>
 			</article>			
-			<article class="gallery-items">
+			<article class="gallery-item">
 				<img src="http://placehold.it/200x200"><br>
 				<b>Увлажняюий кондиционер<br>
 				"Baxter of California"</b>	
@@ -73,7 +73,7 @@
 				</div>	
 				<button class="bnt-buy" type="submit">Купить</button>
 			</article>		
-			<article class="gallery-items">				
+			<article class="gallery-item">				
 				<img src="http://placehold.it/200x200"><br>		
 			    <b>Гель для волос<br>
 				"Suavecito"</b>
@@ -82,7 +82,7 @@
 			    </div>
 				<button class="bnt-buy" type="submit">Купить</button>
 			</article>		
-			<article class="gallery-items">	
+			<article class="gallery-item">	
 			    <img src="http://placehold.it/200x200"><br>
 			    <b>Глина для укладки волос<br>
 				"American crew"</b>
@@ -91,7 +91,7 @@
                 </div>
 				<button class="bnt-buy" type="submit">Купить</button>	
 			</article>		
-			<article class="gallery-items">	
+			<article class="gallery-item">	
 				<img src="http://placehold.it/200x200"><br>			
 			    <b>Гель для волос<br>
 				"American crew"</b>
@@ -100,7 +100,7 @@
                 </div>
 				<button class="bnt-buy" type="submit">Купить</button>
 			</article>				
-			<article class="gallery-items">
+			<article class="gallery-item">
 			    <img src="http://placehold.it/200x200"><br>
 				<b>Набор для бритья<br>
 				"Baxter of California"</b>
@@ -109,7 +109,7 @@
                 </div>
 				<button class="bnt-buy" type="submit">Купить</button>	
 			</article>
-			<section class="number-nav">
+			<section class="pagination">
 				<div>
 					<a class="btn-page" href="#">1</a>
 					<a class="btn-page" href="#">2</a>
@@ -119,7 +119,7 @@
 			</section>
 		</main>
 		<footer class="footer-main">
-			<div class="down-container">
+			<div class="container">
 			    <section class="footer-contacts">
 			    	Барбершоп «Бородинский»<br>
                     Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
